--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -759,8 +759,8 @@
    "outputs": [],
    "source": [
     "def error(x_values, y_values, m, b, x):\n",
-    "    y_at_x = y_actual(x, x_values, y_values)\n",
-    "    e_at_x = "
+    "    y_actual(x, x_values, y_values)\n",
+    "    e_at_x"
    ]
   },
   {
