automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -759,9 +759,10 @@
    "outputs": [],
    "source": [
     "def error(x_values, y_values, m, b, x):\n",
-    "    y_at_x = \n",
+    "    y_at_x = (m*x) + b\n",
     "    y_actual_at_x = y_actual(x, x_values, y_values)\n",
-    "    e_at_x = "
+    "    e_at_x = y_actual_at_x - y_at_x\n",
+    "    return e_at_x"
    ]
   },
   {
