--- a/index.ipynb
+++ b/index.ipynb
@@ -826,11 +826,7 @@
    "outputs": [],
    "source": [
     "def error_line_trace(x_values, y_values, m, b, x):\n",
-    "    error_line = {'marker': {'color': 'red'},\n",
-    "                  'mode': 'line',\n",
-    "                  'name': 'error at' x,\n",
-    "                  'x': [120, 120],\n",
-    "                  'y': [93.0, 214.0]}"
+    "    pass"
    ]
   },
   {
