--- a/index.ipynb
+++ b/index.ipynb
@@ -826,7 +826,7 @@
    "outputs": [],
    "source": [
     "def error_line_trace(x_values, y_values, m, b, x):\n",
-    "    pass"
+    "    error(x_values, y_values, m, b, x)"
    ]
   },
   {
