automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -830,7 +830,7 @@
     "                  'mode': 'line',\n",
     "                  'name': 'error at ' x,\n",
     "                  'x': [x, x],\n",
-    "                  'y': [y_ac, 214.0]}"
+    "                  'y': [y_actual, 214.0]}"
    ]
   },
   {
