--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1134,6 +1134,7 @@
    "outputs": [],
    "source": [
     "def error_line_traces(x_values, y_values, m, b):\n",
+    "    for x in x_values:\n",
     "    error_line = {'marker': {'color': 'red'},\n",
     "                  'mode': 'line',\n",
     "                  'name': 'error at 120',\n",
