automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1141,12 +1141,13 @@
     "                  'name': 'error at 120',\n",
     "                  'x': [x, x],\n",
     "                  'y': [y_actual(x, x_values, y_values), (m*x) + b]}\n",
-    "        return error_line"
+    "        error_traces.append(error_line)\n",
+    "    return error_traces"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1155,16 +1156,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "30"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
