--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1138,7 +1138,7 @@
     "    for x in x_values:\n",
     "        error_line = {'marker': {'color': 'red'},\n",
     "                  'mode': 'line',\n",
-    "                  'name': 'error at 120',\n",
+    "                  'name': 'error at' + str(x),\n",
     "                  'x': [x, x],\n",
     "                  'y': [y_actual(x, x_values, y_values), (m*x) + b]}\n",
     "        error_traces.append(error_line)\n",
@@ -1176,9 +1176,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'marker': {'color': 'red'},\n",
+       " 'mode': 'line',\n",
+       " 'name': 'error at 120',\n",
+       " 'x': [30.0, 30.0],\n",
+       " 'y': [35.0, 61.0]}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "errors_for_regression and errors_for_regression[-1]\n",
     "\n",
