--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1899,7 +1899,7 @@
    "outputs": [],
    "source": [
     "def squared_error(x_values, y_values, m, b, x):\n",
-    "   e error(x_values, y_values, m, b, x)"
+    "    error_sq = (error(x_values, y_values, m, b, x))^2"
    ]
   },
   {
