--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1899,7 +1899,8 @@
    "outputs": [],
    "source": [
     "def squared_error(x_values, y_values, m, b, x):\n",
-    "    error_sq = (error(x_values, y_values, m, b, x))^2\n",
+    "    error = error(x_values, y_values, m, b, x)\n",
+    "    error_sq = int(error)^2\n",
     "    return error_sq"
    ]
   },
