--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1900,7 +1900,7 @@
    "source": [
     "def squared_error(x_values, y_values, m, b, x):\n",
     "    e = error(x_values, y_values, m, b, x)\n",
-    "    error_sq = float(e)^2\n",
+    "    error_sq = (float(e)^2\n",
     "    return error_sq"
    ]
   },
