--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1938,7 +1938,8 @@
    "outputs": [],
    "source": [
     "def squared_errors(x_values, y_values, m, b):\n",
-    "    pass"
+    "    list_of_errs = []\n",
+    "    "
    ]
   },
   {
