automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1939,7 +1939,8 @@
    "source": [
     "def squared_errors(x_values, y_values, m, b):\n",
     "    list_of_errs = []\n",
-    "    for "
+    "    for x in x_values:\n",
+    "        "
    ]
   },
   {
