automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1940,7 +1940,7 @@
     "def squared_errors(x_values, y_values, m, b):\n",
     "    list_of_errs = []\n",
     "    for x in x_values:\n",
-    "        "
+    "        error_at_x = squared_error"
    ]
   },
   {
