--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -2010,7 +2010,8 @@
    "outputs": [],
    "source": [
     "def residual_sum_squares(x_values, y_values, m, b):\n",
-    "    squaressquared"
+    "    squares_list = squared_errors(x_values, y_values, m, b)\n",
+    "    sum(squares_list)"
    ]
   },
   {
